# Hy-ka

./: .gitignore  Makefile  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: experiments.py  runs.py
backend/app/core/: config.py  logging.py
backend/app/db/: session.py
backend/app/models/: __init__.py  entities.py
backend/app/providers/: anthropic_provider.py  base.py  costs.py  factory.py  mock.py  openai_provider.py
backend/app/schemas/: common.py  errors.py  experiments.py  runs.py
backend/app/services/: aggregator.py  dataset_loader.py  execution.py  organizations.py  planner.py  scorer.py
backend/app/utils/: dataset_hash.py
backend/tests/: conftest.py  test_aggregator.py  test_experiments.py  test_health.py  test_planner_determinism.py  test_provider_contract.py  test_run_pipeline.py  test_scorer.py
cli/: main.py  sample_experiment.json
datasets/ci_triage/: v1.jsonl
datasets/pr_review/: v1.jsonl
docs/: ARCHITECTURE.md  BACKEND_PLAN.md  DASHBOARD.md  DATA_MODEL.md  EXECUTION_PIPELINE.md  EXPERIMENTS.md  README.md  ROADMAP.md  TICKETS.md  VISION.md  WORKLOADS.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ModelComparisonChart.tsx  StatPill.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/styles/: global.css
infra/: docker-compose.yml
