[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modeleval-backend"
version = "0.1.0"
description = "ModelEval backend API and execution engine"
requires-python = ">=3.9"
dependencies = [
  "alembic>=1.13.2",
  "anthropic>=0.49.0",
  "eval-type-backport>=0.2.2",
  "fastapi>=0.115.0",
  "httpx>=0.28.1",
  "openai>=1.65.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.36",
  "typer>=0.15.1",
  "uvicorn>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "ruff>=0.8.2"
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
